--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -171,3 +171,13 @@ notes:
     Back: |
       $0$
     Annotations: ''
+- id: 1546904339233
+  fields:
+    Front: |
+      CCAC 02.5 19: Find the limit.
+      $$
+      \lim_{x \to 3^+} \ln(x^2 - 9)
+      $$
+    Back: |
+      $-\infty$
+    Annotations: ''
