--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -181,3 +181,13 @@ notes:
     Back: |
       $-\infty$
     Annotations: ''
+- id: 1546904339447
+  fields:
+    Front: |
+      CCAC 02.5 21: Find the limit.
+      $$
+      \lim_{x \to 2\pi^-} x \csc x
+      $$
+    Back: |
+      $-\infty$
+    Annotations: ''
