--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -231,3 +231,13 @@ notes:
     Back: |
       $0$
     Annotations: ''
+- id: 1546904340496
+  fields:
+    Front: |
+      CCAC 02.5 31: Find the limit.
+      $$
+      \lim_{x \to \infty} \cos x
+      $$
+    Back: |
+      Does not exist.
+    Annotations: ''
