--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -338,3 +338,14 @@ notes:
       f(x) = \frac{2-x}{x^2(x - 3)}
       $$
     Annotations: ''
+- id: 1546904342629
+  fields:
+    Front: >
+      CCAC 02.5 49a: A function $f$ is a ratio of quadratic functions and has a vertical
+      asymptote $x=4$ and just one $x$-intercept, $x=1$. It is known that $f$ has
+      a removable discontinuity at $x=-1$ and that $\lim_{x \to -1} f(x) = 2$. Evaluate
+      $f(0)$.
+    Back: |
+      $\frac{5}{4}$
+    Annotations: ''
+  tags: []
