--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -360,3 +360,14 @@ notes:
       $5$
     Annotations: ''
   tags: []
+- id: 1546904343220
+  fields:
+    Front: |
+      CCAC 02.5 51a: Let $P$ and $Q$ be polynomials. Find
+      $$
+      \lim_{x \to \infty} \frac{P(x)}{Q(x)}
+      $$
+      if the degree of $P$ is less than the degree of $Q$.
+    Back: |
+      $0$
+    Annotations: ''
