--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-6.yml
@@ -214,3 +214,11 @@ notes:
     Back: |
       $-2/a^3$ m/s; $-2$ m/s; $-\frac{1}{4}$ m/s; $-\frac{2}{27}$ m/s.
     Annotations: ''
+- id: 1546912647946
+  fields:
+    Front: |
+      CCAC 02.6 19: If an equation of the tangent line to the curve $y = f(x)$ at the point where $a = 2$ is $y = 4x-5$, find $f(2)$ and $f'(2)$.
+    Back: |
+      $f(2) = 3$; $f'(2) = 4$.
+    Annotations: ''
+  tags: []
