--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-6.yml
@@ -284,3 +284,15 @@ notes:
       \frac{5}{(a + 3)^2}
       $$
     Annotations: ''
+- id: 1546912648445
+  fields:
+    Front: |
+      CCAC 02.6 31: Find $f'(a)$ for the following function.
+      $$
+      f(x) = \sqrt{1 - 2x}
+      $$
+    Back: |
+      $$
+      - \frac{1}{\sqrt{1 - 2a}}
+      $$
+    Annotations: ''
