--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-6.yml
@@ -296,3 +296,13 @@ notes:
       - \frac{1}{\sqrt{1 - 2a}}
       $$
     Annotations: ''
+- id: 1546912648546
+  fields:
+    Front: |
+      CCAC 02.6 33: The limit below represents the derivative of some function $f$ at some number $a$. State such an $f$ and $a$.
+      $$
+      \lim_{h \to 0} \frac{(1 + h)^{10} - 1}{h}
+      $$
+    Back: |
+      $f(x) = x^{10}$, $a = 1$ or $f(x) = (1 + x)^{10}$, $a = 0$.
+    Annotations: ''
